--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,5 +1,3 @@
-# config location "~/.config/alacritty/alacritty.yml"
-
 env:
   TERM: xterm-256color
 
@@ -35,13 +33,29 @@ colors:
     white:   '#adbac7'
 
 scrolling:
-  history: 10000
+  history: 10
   multiplier: 3
-  faux_multiplier: 3
-  auto_scroll: false
+  #faux_multiplier: 3
+  #auto_scroll: false
 
 font:
-  size: 10.0
+  normal:
+   family: "Hack Nerd Font"
+   style: Regular
+  
+   bold:
+    family: "Hack Nerd Font"
+    style: Bold
+  
+   italic:
+    family: "Hack Nerd Font"
+    style: Italic
+  
+   bold_italic:
+    family: "Hack Nerd Font"
+    style: Bold Italic
+  
+  size: 11.0
 
   offset:
     x: 0
